# mlproject

./: .gitignore  environment.yml  pyproject.toml  requirements.txt  setup.py
notebooks/: EDA Student Performance.ipynb  Model Training.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/components/catboost_info/: catboost_training.json  time_left.tsv
src/components/catboost_info/learn/: events.out.tfevents
src/config/: paths.py
